Init SP02 (Sprite)
- Import code from sample 02

--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -131,16 +131,29 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\sample01\debug.cpp" />
-    <ClCompile Include="..\sample01\Game.cpp" />
-    <ClCompile Include="..\sample01\GameObject.cpp" />
-    <ClCompile Include="..\sample01\main.cpp" />
+    <ClCompile Include="..\02-Sprite\Animation.cpp" />
+    <ClCompile Include="..\02-Sprite\Animations.cpp" />
+    <ClCompile Include="..\02-Sprite\debug.cpp" />
+    <ClCompile Include="..\02-Sprite\Game.cpp" />
+    <ClCompile Include="..\02-Sprite\GameObject.cpp" />
+    <ClCompile Include="..\02-Sprite\main.cpp" />
+    <ClCompile Include="..\02-Sprite\Mario.cpp" />
+    <ClCompile Include="..\02-Sprite\Sprite.cpp" />
+    <ClCompile Include="..\02-Sprite\Sprites.cpp" />
+    <ClCompile Include="..\02-Sprite\Textures.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\sample01\debug.h" />
-    <ClInclude Include="..\sample01\Game.h" />
-    <ClInclude Include="..\sample01\GameObject.h" />
-    <ClInclude Include="..\sample01\Texture.h" />
+    <ClInclude Include="..\02-Sprite\Animation.h" />
+    <ClInclude Include="..\02-Sprite\AnimationFrame.h" />
+    <ClInclude Include="..\02-Sprite\Animations.h" />
+    <ClInclude Include="..\02-Sprite\debug.h" />
+    <ClInclude Include="..\02-Sprite\Game.h" />
+    <ClInclude Include="..\02-Sprite\GameObject.h" />
+    <ClInclude Include="..\02-Sprite\Mario.h" />
+    <ClInclude Include="..\02-Sprite\Sprite.h" />
+    <ClInclude Include="..\02-Sprite\Sprites.h" />
+    <ClInclude Include="..\02-Sprite\Texture.h" />
+    <ClInclude Include="..\02-Sprite\Textures.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
