Adding Jump State class
- Jump state of mario (small form)
- This class will handle multiple form jump state

--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Hitbox.h" />
     <ClInclude Include="IdleState.h" />
+    <ClInclude Include="JumpState.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerState.h" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="IdleState.cpp" />
+    <ClCompile Include="JumpState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Player.cpp" />
