--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="FallState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JumpState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -144,6 +147,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FallState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="JumpState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
