--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityList.h" />
     <ClInclude Include="FallState.h" />
+    <ClInclude Include="Fireball.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameUtils.h" />
@@ -155,6 +156,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScenePlay.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Tail.h" />
     <ClInclude Include="Tile.h" />
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +167,7 @@
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FallState.cpp" />
+    <ClCompile Include="Fireball.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameUtils.cpp" />
@@ -181,6 +184,7 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ScenePlay.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Tail.cpp" />
     <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
