Adding item (Coin) object
- Coin class (handle collision event, animation event, ...)
- Coin animated sprite data.

--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="AnimatedSprite.h" />
     <ClInclude Include="Background.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Coin.h" />
     <ClInclude Include="CrouchState.h" />
     <ClInclude Include="Device.h" />
     <ClInclude Include="Entity.h" />
@@ -166,6 +167,7 @@
     <ClCompile Include="AnimatedSprite.cpp" />
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Coin.cpp" />
     <ClCompile Include="CrouchState.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="Entity.cpp" />
