--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="JumpState.h" />
     <ClInclude Include="MapState.h" />
     <ClInclude Include="MaskTile.h" />
+    <ClInclude Include="Paragoomba.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerState.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapState.cpp" />
     <ClCompile Include="MaskTile.cpp" />
+    <ClCompile Include="Paragoomba.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerState.cpp" />
