--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="EntityList.h" />
     <ClInclude Include="FallState.h" />
     <ClInclude Include="Fireball.h" />
+    <ClInclude Include="Flower.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameUtils.h" />
@@ -178,6 +179,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="FallState.cpp" />
     <ClCompile Include="Fireball.cpp" />
+    <ClCompile Include="Flower.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameUtils.cpp" />
