Bonus item (leaf) class
Handle bonus item leaf data.

--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="HUD.h" />
     <ClInclude Include="IdleState.h" />
     <ClInclude Include="JumpState.h" />
+    <ClInclude Include="Leaf.h" />
     <ClInclude Include="MapState.h" />
     <ClInclude Include="MaskTile.h" />
     <ClInclude Include="Mushroom.h" />
@@ -189,6 +190,7 @@
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="IdleState.cpp" />
     <ClCompile Include="JumpState.cpp" />
+    <ClCompile Include="Leaf.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapState.cpp" />
     <ClCompile Include="MaskTile.cpp" />
