--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="Koopa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BonusItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -276,6 +279,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Koopa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BonusItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
