--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="MaskTile.h" />
     <ClInclude Include="Mushroom.h" />
     <ClInclude Include="Paragoomba.h" />
+    <ClInclude Include="Parakoopa.h" />
     <ClInclude Include="PBlock.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Player.h" />
@@ -206,6 +207,7 @@
     <ClCompile Include="MaskTile.cpp" />
     <ClCompile Include="Mushroom.cpp" />
     <ClCompile Include="Paragoomba.cpp" />
+    <ClCompile Include="Parakoopa.cpp" />
     <ClCompile Include="PBlock.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Player.cpp" />
