--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="VenusPlant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScorePopUp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -300,6 +303,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VenusPlant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ScorePopUp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
