--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClInclude Include="SceneMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PropPlant.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -336,6 +339,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SceneMap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PropPlant.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
