Intro scene data file generate

--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Fireball.h" />
     <ClInclude Include="Flower.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameIcon.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameUtils.h" />
     <ClInclude Include="Goomba.h" />
@@ -202,6 +203,7 @@
     <ClCompile Include="Fireball.cpp" />
     <ClCompile Include="Flower.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameIcon.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameUtils.cpp" />
     <ClCompile Include="Goomba.cpp" />
