--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClInclude Include="PropPlant.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameIcon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -342,6 +345,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PropPlant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameIcon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
