--- a/MarioGameDev_SE102_17521269.vcxproj
+++ b/MarioGameDev_SE102_17521269.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="SceneMap.h" />
     <ClInclude Include="ScenePlay.h" />
     <ClInclude Include="ScorePopUp.h" />
+    <ClInclude Include="SelectText.h" />
     <ClInclude Include="ShinyBrick.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Star.h" />
@@ -238,6 +239,7 @@
     <ClCompile Include="SceneMap.cpp" />
     <ClCompile Include="ScenePlay.cpp" />
     <ClCompile Include="ScorePopUp.cpp" />
+    <ClCompile Include="SelectText.cpp" />
     <ClCompile Include="ShinyBrick.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Star.cpp" />
