--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClInclude Include="GameLogo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SelectText.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -354,6 +357,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameLogo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectText.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
