--- a/MarioGameDev_SE102_17521269.vcxproj.filters
+++ b/MarioGameDev_SE102_17521269.vcxproj.filters
@@ -189,6 +189,9 @@
     <ClInclude Include="SelectText.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SceneIntro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameUtils.cpp">
@@ -360,6 +363,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SelectText.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneIntro.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
